Melhoria de código, perfomasse e refatoração